c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_declarations/extra_credit/deref_label.c
// It's illegal to dereference a label
int main(void) {
    lbl:
    *lbl;
    return 0;
}